# data-update-service

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  mod.rs
src/helpers/: utils.rs
src/routers/: health.rs
