[package]
name = "data-update-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
#utoipa = "5.2.0"
#utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.93"
dotenvy = "0.15.7"
#utoipa-axum = "0.1.2"
#utoipa-redoc = { version = "5.0.0", features = ["axum"] }
